mensmbahkan sedikir code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="https://x.com/grif1n16"><i class='bx bxl-twitter' ></i></a>
                         <a href="https://github.com/grisf1n"><i class='bx bxl-github' ></i></a>
                     </div>
-                    <a href="#contact" class="btn">
+                    <a href="https://drive.google.com/file/d/1r-DRgBaI4Y3iVVQBKwFSgZ288pPlFCdf/view?usp=sharing" class="btn">
                         Read More
                         <i class='bx bxs-rocket' ></i>
                     </a>
@@ -292,8 +292,8 @@
                         <div class="portofolio-wrap">
                             <img src="artikel.png" alt="" class="img-fluid">
                             <div class="portofolio-info">
-                                <h4>web 3</h4>
-                                <p>web</p>
+                                <h4>web 1</h4>
+                                <p>Artikel</p>
                                 <div class="portofolio-links">
                                     <a href=" https://grisf1n.github.io/Artikel/"><ion-icon name="add-outline"></ion-icon></a>
                                     <a href=" https://grisf1n.github.io/Artikel/"><ion-icon name="link-outline"></ion-icon></a>
@@ -303,13 +303,13 @@
                     </div>
                     <div class="portofolio-item filter-app">
                         <div class="portofolio-wrap">
-                            <img src="sepatu3.jpg" alt="" class="img-fluid">
+                            <img src="portofolio.png" alt="" class="img-fluid">
                             <div class="portofolio-info">
-                                <h4>App 1</h4>
-                                <p>App</p>
+                                <h4>Web 2</h4>
+                                <p>Personal Portofolio</p>
                                 <div class="portofolio-links">
-                                    <a href="#"><ion-icon name="add-outline"></ion-icon></a>
-                                    <a href="#"><ion-icon name="link-outline"></ion-icon></a>
+                                    <a href="#https://grisf1n.github.io/Personal-Portolio/"><ion-icon name="add-outline"></ion-icon></a>
+                                    <a href="#https://grisf1n.github.io/Personal-Portolio/"><ion-icon name="link-outline"></ion-icon></a>
                                 </div>
                             </div>
                         </div>
